--- a/test/index.html
+++ b/test/index.html
@@ -58,3 +58,7 @@ const createOrUpdateMutation = useMutation({
     });
   },
 });
+
+const onSubmit = (data: CategoryFormData) => {
+  createOrUpdateMutation.mutate(data);
+};
